--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+    <script>
+      var OneSignal = window.OneSignal || [];
+      OneSignal.push(function() {
+        OneSignal.init({
+          appId: "8e0ffae9-1f9a-4c4b-b015-4da50f16f93a",
+        });
+      });
+    </script>
   <meta name="theme-color" content="white"/>
   <meta charset="utf-8">
   <title>Hello World</title>
